Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-109336

windeployqt does not deploy OPC UA plugins

    XMLWordPrintable

Details

    • Windows
    • f8a9047c9 (dev)

    Description

      Steps to reproduce

      1. Build the OPC UA Viewer Example (https://doc.qt.io/qt-6/qtopcua-opcuaviewer-example.html ) in Release mode
      2. Run windeployqt on it

       

      Outcomes

      • windeployqt deploys <QTDIR>\bin\Qt6OpcUa.dll (or Qt5OpcUa.dll) (expected)
      • windeployqt does not deploy <QTDIR>\plugins\opcua\open62541_backend.dll (not expected)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            timothee.keller Timothée Keller (Inactive)
            skoh-qt Sze Howe Koh
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There is 1 open Gerrit change